--- a/styles.css
+++ b/styles.css
@@ -1142,6 +1142,15 @@ main.shift {
     .next {
         right: 10px;
     }
+
+    .diary-updates img {
+        width: 60%; 
+        max-width: 100%;
+        height: auto;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
 }
 
 /* Large desktop styles */
@@ -1357,6 +1366,14 @@ main.shift {
     
     .next {
         right: 10px;
+    }
+
+    .diary-updates img {
+        width: 60%; 
+        max-width: 100%;
+        height: auto;
+        padding-left: 20px;
+        padding-right: 20px;
     }
 }
 
