--- a/styles.css
+++ b/styles.css
@@ -1145,10 +1145,10 @@ main.shift {
 
     .diary-updates img {
         width: 60%; 
-        max-width: 100%;
+        max-width: 80%;
         height: auto;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 20%;
+        padding-right: 20%;
     }
 
 }
@@ -1370,10 +1370,10 @@ main.shift {
 
     .diary-updates img {
         width: 60%; 
-        max-width: 100%;
+        max-width: 80%;
         height: auto;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 20%;
+        padding-right: 20%;
     }
 }
 
