Updated CSS file with new content

--- a/styles.css
+++ b/styles.css
@@ -608,9 +608,15 @@ main.shift {
     margin: 0 auto;
 }
 
+.update-carousel-item {
+    width: 70%;
+    padding-left: 20%;
+    padding-right: 20%;
+}
+
 .diary-updates img {
     width: 70%;
-    max-width: 80%;    
+    max-width: 100%;    
     height: auto;
 }
 
