--- a/styles.css
+++ b/styles.css
@@ -602,7 +602,7 @@ main.shift {
 }
 
 .diary-updates {
-    max-width: 85%;    
+    max-width: 70%;    
     height: auto;    
     display: block;    
     margin: 0 auto;
@@ -915,6 +915,13 @@ main.shift {
     .toy-wrapper p {
         font-size: 0.9em;
     }
+
+    .diary-updates {
+        max-width: 70%;    
+        height: auto;    
+        display: block;    
+        margin: 0 auto;
+    }
 }
 
 /* Desktop styles */
@@ -1145,6 +1152,13 @@ main.shift {
         right: 10px;
     }
 
+    .diary-updates {
+        max-width: 70%;    
+        height: auto;    
+        display: block;    
+        margin: 0 auto;
+    }
+
 }
 
 /* Large desktop styles */
@@ -1360,6 +1374,13 @@ main.shift {
     
     .next {
         right: 10px;
+    }
+
+    .diary-updates {
+        max-width: 70%;    
+        height: auto;    
+        display: block;    
+        margin: 0 auto;
     }
 }
 
