--- a/styles.css
+++ b/styles.css
@@ -656,6 +656,30 @@ main.shift {
     right: 10px;
 }
 
+.diary-link {
+    margin-top: 10px;
+    text-align: left;
+    padding-left: 13%;
+}
+
+.diary-link p {
+    font-family:'Courier New', Courier, monospace;
+    margin: 10px 0;
+}
+
+.diary-link a {
+    color: #040404;
+    text-decoration: none;
+    font-size: 16px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.diary-link a:hover {
+    color: rgba(71, 70, 71, 0.075);
+    cursor: pointer;
+}
 
 
 .gallery-page {
