--- a/styles.css
+++ b/styles.css
@@ -606,11 +606,16 @@ main.shift {
     height: auto;    
     display: block;    
     margin: 0 auto;
+    object-fit: contain;
 }
 
 .diary-updates img {   
     padding-left: 20%;
     padding-right: 20%;
+}
+
+.image-overlay {
+    display: none; /* Hide by default */
 }
 
 .update-carousel {
@@ -629,6 +634,9 @@ main.shift {
 }
 
 .update-carousel-item {
+    position: relative;
+    width: 100%;
+    height: 100%;
     min-width: 100%;
     backface-visibility: hidden;
     text-align: center;
@@ -1733,8 +1741,89 @@ main.shift {
         align-content: center;
     }
 
+    .update-carousel-item {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        color: #B0AEAE;
+        font-size: smaller;
+    }
+
+    .diary-updates {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+
+    .image-overlay.mobile-only {
+        position: absolute;
+        bottom: 10px;
+        right: 40px;
+        background: rgba(48, 47, 47, 0.6);
+        color: white;
+        padding: 5px 10px;
+        border-radius: 20px;
+        font-size: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .enlarge-icon {
+        width: 24px;
+        height: 24px;
+        background-color: white;
+        border-radius: 50%;
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .enlarge-icon::before {
+        content: '';
+        width: 10px;
+        height: 10px;
+        border: 2px solid #333;
+        border-radius: 50%;
+        position: absolute;
+        top: 5px;
+        left: 5px;
+    }
+
+    .enlarge-icon::after {
+        content: '';
+        width: 6px;
+        height: 2px;
+        background-color: #333;
+        position: absolute;
+        bottom: 6px;
+        right: 5px;
+        transform: rotate(45deg);
+    }
+
+    .fullscreen-image {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(160, 158, 158, 0.9);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
+
+    
+    .fullscreen-image img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+    }
+
     .diary-link {
-        font-size: x-small;
+        font-size:xx-small;
     }
 
     /* Hide scrollbar for cleaner look */
